--- a/src/pages/_partials/_steps/_add-cli-test-commands.mdx
+++ b/src/pages/_partials/_steps/_add-cli-test-commands.mdx
@@ -1,3 +1,5 @@
+import CoredumpStorageTest from "@site/src/pages/_partials/_steps/_coredump-storage-test.mdx";
+
 The Memfault SDK functionality can be easily exercised via CLI test commands.
 
 :::note
@@ -7,12 +9,10 @@ button press or called from `main()` on bootup from a test image
 
 :::
 
+#### Test platform ports
+
 ```c
 #include "memfault/components.h"
-
-//
-// Test Platform Ports
-//
 
 int test_logging(int argc, char *argv[]) {
   MEMFAULT_LOG_DEBUG("Debug log!");
@@ -21,23 +21,14 @@ int test_logging(int argc, char *argv[]) {
   MEMFAULT_LOG_ERROR("Error log!");
   return 0;
 }
+```
 
-// Runs a sanity test to confirm coredump port is working as expected
-int test_coredump_storage(int argc, char *argv[]) {
+<CoredumpStorageTest />
 
-  // Note: Coredump saving runs from an ISR prior to reboot so should
-  // be safe to call with interrupts disabled.
-  your_platform_disable_interrupts();
-  memfault_coredump_storage_debug_test_begin();
-  your_platform_enable_interrupts();
+#### Test core SDK functionality
 
-  memfault_coredump_storage_debug_test_finish();
-  return 0;
-}
-
-//
-// Test core SDK functionality
-//
+```c
+#include "memfault/components.h"
 
 // Triggers an immediate heartbeat capture (instead of waiting for timer
 // to expire)
@@ -56,10 +47,12 @@ int test_reboot(int argc, char *argv[]) {
   memfault_reboot_tracking_mark_reset_imminent(kMfltRebootReason_UserReset, NULL);
   memfault_platform_reboot();
 }
+```
 
-//
-// Test different crash types where a coredump should be captured
-//
+#### Test different crash types where a coredump should be captured
+
+```c
+#include "memfault/components.h"
 
 int test_assert(int argc, char *argv[]) {
   MEMFAULT_ASSERT(0);
