--- a/docs/mcu/zephyr-guide.mdx
+++ b/docs/mcu/zephyr-guide.mdx
@@ -212,15 +212,16 @@ build time. To enable them, set the `CONFIG_ASSERT=y` Kconfig variable:
 CONFIG_ASSERT=y
 ```
 
-## Reference Example
+## Reference Examples
 
 Memfault provides two different Zephyr examples. See the links below for
 documentation and usage information.
 
-1. Zephyr example with networking enabled:
+1. Zephyr example with networking enabled, targeting the
+   [STM32L4 Discovery Kit for IoT Node (B-L475E-IOT01A)](https://www.st.com/en/evaluation-tools/b-l475e-iot01a.html):
 
    - [https://github.com/memfault/memfault-firmware-sdk/tree/master/examples/zephyr/README.md](https://github.com/memfault/memfault-firmware-sdk/blob/73fab8656b17bde6efa11bf78fbe155a8dbabf78/examples/zephyr/README.md)
 
-2. Non-networked example:
+2. Non-networked example, can be used with any Cortex-M board:
 
    - [https://github.com/memfault/zephyr-memfault-example/tree/memfault/README.md](https://github.com/memfault/zephyr-memfault-example/blob/aeb3853851c7f92bc4015d548a246d1a856d1588/README.md)
