--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -12,9 +12,15 @@ This tutorial will go over integrating the
 a system that is using the
 [ESP-IDF](https://docs.espressif.com/projects/esp-idf) for an ESP32 chip. It
 assumes you already have a working project/toolchain for the ESP32. If you do
-not, the official getting started guide is a great resource!
+not, the
+[official getting started guide](https://docs.espressif.com/projects/esp-idf/en/latest/esp32/get-started/index.html)
+is a great resource!
 
 The integration works for both ESP-IDF 3.x and 4.x releases.
+
+This integration is tested on the
+[ESP32-WROVER-KIT V4.1](https://docs.espressif.com/projects/esp-idf/en/v4.4.1/esp32/hw-reference/esp32/get-started-wrover-kit.html),
+but applies similarly to any ESP32-based board.
 
 ### Clone Memfault SDK
 
