Document upcoming metrics features of the Linux SDK (#293)

--- a/docs/linux/introduction.mdx
+++ b/docs/linux/introduction.mdx
@@ -18,7 +18,7 @@ reason tracking, and in the future reporting crashes and logs.
 <p>
   <figure>
     <img
-      src="/img/docs/linux/sdk-overview.svg"
+      src="/img/docs/linux/sdk-overview-0.3.0.svg"
       alt="Overview of the Memfault Linux SDK"
     />
     <figcaption>
@@ -44,6 +44,8 @@ versions of our SDK makes the following assumptions:
 - It uses [`systemd`][systemd-homepage] as an init system.
 - It uses [SWUpdate][swupdate-homepage] for OTA (optional if you don't plan to
   integrate with OTA).
+- It uses [CollectD][collectd-homepage] for metrics (optional if you don't plan
+  to integrate with Metrics).
 
 If your project diverges from these assumptions, please [get in
 touch][get-in-touch]. It will likely still work without major changes.
@@ -96,13 +98,15 @@ configure it to talk to our hawkBit DDI-compatible endpoint.
 [hawkbit-ddi]: https://www.eclipse.org/hawkbit/apis/ddi_api/
 [swupdate-homepage]: https://swupdate.org/
 
-### Metrics (available with next release)
+### Metrics
 
 The Memfault Linux SDK relies on [`collectd`][collectd-homepage] for the
 collection and transmission of metrics. Application metrics can be sent to
-`collectd` by means of [`statsd`][statsd-homepage].
+`collectd` by means of [`statsd`][statsd-homepage]. Read more about setting up
+metrics for Linux [here].
 
 [collectd-homepage]: https://collectd.org/
+[docs-metrics]: /docs/linux/linux-metrics
 [statsd-homepage]: https://github.com/statsd/statsd
 
 ### Reboot Reason Tracking, Crash Reports and Logs
