--- a/docs/platform/metrics.mdx
+++ b/docs/platform/metrics.mdx
@@ -24,7 +24,8 @@ SDKs:
 - for MCU: [Collecting Device Metrics using our MCU SDK](/docs/mcu/metrics-api)
 - for Android:
   [Bort SDK Built-In Metrics](/docs/android/android-builtin-metrics),
-  [Bort Custom Metrics APIs](/docs/android/android-custom-metrics).
+  [Bort Custom Metrics APIs](/docs/android/android-custom-metrics)
+- for Linux: [Linux Metrics](/docs/linux/linux-metrics)
 
 ### From the Memfault app
 
@@ -210,7 +211,7 @@ supported).
 There are three ways to write an Attribute:
 
 1. using the Metrics APIs
-   ([MCU](/docs/mcu/metrics-api)/[Android](/docs/android/android-custom-metrics))
+   ([MCU](/docs/mcu/metrics-api)/[Android](/docs/android/android-custom-metrics)/[Linux](/docs/linux/linux-metrics))
 2. using the REST API
 3. using the web application.
 
