--- a/docs/linux/linux-releases-integration-guide.mdx
+++ b/docs/linux/linux-releases-integration-guide.mdx
@@ -4,6 +4,7 @@ title: Embedded Linux OTA Integration Guide
 sidebar_label: OTA Management
 ---
 
+import { ProjectMagicLink } from "@site/src/components/ProjectMagicLink";
 import OtaCdnFeaturesAdmonition from "@site/src/pages/_partials/_ota-cdn-features-admonition.mdx";
 
 This tutorial covers how to manage your embedded Linux over-the-air update flow
@@ -178,6 +179,21 @@ INFO: You can view in the UI here:
 
 :::
 
+### Enable development mode
+
+By default, your devices will be asked to poll every 12 hours by the Memfault
+backend. In order to speed up the integration process, we've added a development
+mode setting to Cohorts.
+
+<p>
+  Select{" "}
+  <ProjectMagicLink path="/cohorts/default">
+    the <code>default</code> Cohort in <b>Fleet -> Cohorts</b>
+  </ProjectMagicLink>{" "}
+  and open its Settings view. In it, select "Development mode: every minute" in
+  the hawkBit polling interval section.
+</p>
+
 ### Activate the Release
 
 Now let's activate the Release in the `default` Cohort.
@@ -280,6 +296,12 @@ well as `memfaultd`'s reboot reason tracking plugin depend on it.
 Aborting or Rolling back from a Release which has a firmware regression is easy
 to do from the UI. Simply navigate to "Fleet" -> "Cohorts", click on the picker
 under "Options" and select the "Abort Rollout" option.
+
+### Disable development mode
+
+Remember to undo the steps you took in
+[Enable development mode](#enable-development-mode) and to configure your Cohort
+with a value that'll work for your project on production.
 
 [3]: https://sbabic.github.io/swupdate
 [4]: https://sbabic.github.io/swupdate/suricatta.html
